--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: "windows-2019"
     continue-on-error: ${{ matrix.config.experimental }}
     env:
-      USING_COVERAGE: '3.6,3.7,3.8,3.9,3.10,pypy-3.6'
+      USING_COVERAGE: '3.6,3.7,3.8,3.9,3.10,3.11,3.12,3.13.0-alpha.2'
 
     strategy:
       fail-fast: False
@@ -32,8 +32,10 @@ jobs:
           - {python-version: "3.7", testenvs: "py37,build", experimental: False}
           - {python-version: "3.8", testenvs: "py38,build", experimental: False}
           - {python-version: "3.9", testenvs: "py39,build", experimental: False}
-          - {python-version: "3.10", testenvs: "py310-dev,build", experimental: True}
-          - {python-version: "pypy-3.6", testenvs: "pypy3", experimental: False}
+          - {python-version: "3.10", testenvs: "py310,build", experimental: False}
+          - {python-version: "3.11", testenvs: "py311,build", experimental: False}
+          - {python-version: "3.12", testenvs: "py312,build", experimental: False}
+          - {python-version: "3.13.0-alpha.2", testenvs: "py313-dev,build", experimental: True}
 
     steps:
       - name: Checkout 🛎️
@@ -67,3 +69,10 @@ jobs:
       - name: "Run Tests for Python ${{ matrix.config.python-version }}"
         if: steps.setup-python.outcome == 'success'
         run: python -m tox -e "${{ matrix.config.testenvs }}" -s false
+
+      - name: "Upload Coverage 🚀"
+        uses: actions/upload-artifact@v3
+        if: ${{ always() && steps.setup-python.outcome == 'success' }}
+        with:
+          name: "coverage-${{ matrix.config.python-version }}"
+          path: .coverage
