--- a/.github/workflows/python_ci_linux.yml
+++ b/.github/workflows/python_ci_linux.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: "ubuntu-20.04"
     continue-on-error: ${{ matrix.config.experimental }}
     env:
-      USING_COVERAGE: '3.6,3.7,3.8,3.9,3.10,pypy-3.6'
+      USING_COVERAGE: '3.6,3.7,3.8,3.9,3.10,3.11,3.12,3.13.0-alpha.2'
 
     strategy:
       fail-fast: False
@@ -33,8 +33,10 @@ jobs:
           - {python-version: "3.7", testenvs: "py37,build", experimental: False}
           - {python-version: "3.8", testenvs: "py38,build", experimental: False}
           - {python-version: "3.9", testenvs: "py39,build", experimental: False}
-          - {python-version: "3.10", testenvs: "py310-dev,build", experimental: True}
-          - {python-version: "pypy-3.6", testenvs: "pypy3,build", experimental: False}
+          - {python-version: "3.10", testenvs: "py310,build", experimental: False}
+          - {python-version: "3.11", testenvs: "py311,build", experimental: False}
+          - {python-version: "3.12", testenvs: "py312,build", experimental: False}
+          - {python-version: "3.13.0-alpha.2", testenvs: "py313-dev,build", experimental: True}
 
     steps:
       - name: Checkout 🛎️
@@ -64,12 +66,67 @@ jobs:
           python -m site
           python -m pip install --upgrade pip setuptools wheel
           python -m pip install --upgrade tox~=3.0 virtualenv!=20.16.0
+          python -m pip install --upgrade coverage_pyver_pragma
 
       - name: "Run Tests for Python ${{ matrix.config.python-version }}"
         if: steps.setup-python.outcome == 'success'
         run: python -m tox -e "${{ matrix.config.testenvs }}" -s false
 
+      - name: "Upload Coverage 🚀"
+        uses: actions/upload-artifact@v3
+        if: ${{ always() && steps.setup-python.outcome == 'success' }}
+        with:
+          name: "coverage-${{ matrix.config.python-version }}"
+          path: .coverage
 
+
+  Coverage:
+    needs: tests
+    runs-on: "ubuntu-20.04"
+    steps:
+      - name: Checkout 🛎️
+        uses: "actions/checkout@v3"
+
+      - name: Setup Python 🐍
+        uses: "actions/setup-python@v4"
+        with:
+          python-version: 3.8
+
+      - name: Install dependencies 🔧
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade "coveralls>=3.0.0" coverage_pyver_pragma
+
+      - name: "Download Coverage 🪂"
+        uses: actions/download-artifact@v3
+        with:
+          path: coverage
+
+      - name: Display structure of downloaded files
+        id: show
+        run: ls -R
+        working-directory: coverage
+        continue-on-error: true
+
+      - name: Combine Coverage 👷
+        if: ${{ steps.show.outcome != 'failure' }}
+        run: |
+          shopt -s globstar
+          python -m coverage combine coverage/**/.coverage
+
+      - name: "Upload Combined Coverage Artefact 🚀"
+        if: ${{ steps.show.outcome != 'failure' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: "combined-coverage"
+          path: .coverage
+
+      - name: "Upload Combined Coverage to Coveralls"
+        if: ${{ steps.show.outcome != 'failure' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          coveralls --service=github
 
   Deploy:
     needs: tests
