--- a/formate.toml
+++ b/formate.toml
@@ -32,13 +32,16 @@ use_parentheses = true
 remove_redundant_aliases = true
 default_section = "THIRDPARTY"
 known_third_party = [
+    "coincidence",
     "coverage",
     "coverage_pyver_pragma",
     "github",
+    "importlib_metadata",
     "pytest",
     "pytest_cov",
     "pytest_randomly",
     "pytest_rerunfailures",
+    "pytest_timeout",
     "requests",
 ]
 known_first_party = "create_redirect"
