--- a/tox.ini
+++ b/tox.ini
@@ -13,12 +13,15 @@
 #     * testenv:perflint
 #     * testenv:mypy
 #     * testenv:pyup
+#     * testenv:coverage
 #     * flake8
+#     * coverage:run
+#     * coverage:report
 #     * check-wheel-contents
 #     * pytest
 
 [tox]
-envlist = py36, py37, py38, py39, py310-dev, pypy3, mypy, build
+envlist = py36, py37, py38, py39, py310, py311, py312, py313-dev, mypy, build
 skip_missing_interpreters = True
 isolated_build = True
 requires =
@@ -28,20 +31,31 @@ requires =
     virtualenv!=20.16.0
 
 [envlists]
-test = py36, py37, py38, py39, py310-dev, pypy3
+test = py36, py37, py38, py39, py310, py311, py312, py313-dev
 qa = mypy, lint
+cov = py38, coverage
 
 [testenv]
 setenv =
     PYTHONDEVMODE=1
     PIP_DISABLE_PIP_VERSION_CHECK=1
     SETUPTOOLS_USE_DISTUTILS=stdlib
-deps = importcheck>=0.1.0
+deps = -r{toxinidir}/tests/requirements.txt
 commands =
     python --version
-    python -m importcheck {posargs:--show}
+    python -m pytest --cov=create_redirect -r aR tests/ {posargs}
 
 [testenv:.package]
+setenv =
+    PYTHONDEVMODE=1
+    PIP_DISABLE_PIP_VERSION_CHECK=1
+
+[testenv:py313-dev]
+setenv =
+    PYTHONDEVMODE=1
+    PIP_DISABLE_PIP_VERSION_CHECK=1
+
+[testenv:py312]
 setenv =
     PYTHONDEVMODE=1
     PIP_DISABLE_PIP_VERSION_CHECK=1
@@ -100,7 +114,7 @@ deps =
     pydocstyle>=6.0.0
     pygments>=2.7.1
     importlib_metadata<4.5.0; python_version<'3.8'
-commands = python3 -m flake8_rst_docstrings_sphinx create_redirect --allow-toolbox {posargs}
+commands = python3 -m flake8_rst_docstrings_sphinx create_redirect tests --allow-toolbox {posargs}
 
 [testenv:perflint]
 basepython = python3.8
@@ -114,8 +128,10 @@ commands = python3 -m perflint create_redirect {posargs}
 basepython = python3.8
 ignore_errors = True
 changedir = {toxinidir}
-deps = mypy==0.971
-commands = mypy create_redirect {posargs}
+deps =
+    mypy==0.971
+    -r{toxinidir}/tests/requirements.txt
+commands = mypy create_redirect tests {posargs}
 
 [testenv:pyup]
 basepython = python3.8
@@ -123,7 +139,26 @@ skip_install = True
 ignore_errors = True
 changedir = {toxinidir}
 deps = pyupgrade-directories
-commands = pyup_dirs create_redirect --py36-plus --recursive
+commands = pyup_dirs create_redirect tests --py36-plus --recursive
+
+[testenv:coverage]
+basepython = python3.8
+skip_install = True
+ignore_errors = True
+whitelist_externals = /bin/bash
+passenv =
+    COV_PYTHON_VERSION
+    COV_PLATFORM
+    COV_PYTHON_IMPLEMENTATION
+    *
+changedir = {toxinidir}
+deps =
+    coverage>=5
+    coverage_pyver_pragma>=0.2.1
+commands =
+    /bin/bash -c "rm -rf htmlcov"
+    coverage html
+    /bin/bash -c "DISPLAY=:0 firefox 'htmlcov/index.html'"
 
 [flake8]
 max-line-length = 120
@@ -150,15 +185,12 @@ unused-arguments-ignore-overload-functions = True
 unused-arguments-ignore-magic-methods = True
 unused-arguments-ignore-variadic-names = True
 
-[check-wheel-contents]
-ignore = W002
-toplevel = create_redirect
-package = create_redirect
-
 [coverage:run]
 plugins = coverage_pyver_pragma
 
 [coverage:report]
+fail_under = 80
+show_missing = True
 exclude_lines =
     raise AssertionError
     raise NotImplementedError
@@ -167,7 +199,15 @@ exclude_lines =
     if TYPE_CHECKING:
     if typing.TYPE_CHECKING:
     if __name__ == .__main__.:
-    \.\.\.
+
+[check-wheel-contents]
+ignore = W002
+toplevel = create_redirect
+package = create_redirect
+
+[pytest]
+addopts = --color yes --durations 25
+timeout = 300
 
 [gh-actions]
 python =
